--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch P5726",
+            "request": "launch",
+            "mainClass": "P5726",
+            "projectName": "DevelopMentOnline_e683f3a1"
+        },
+        {
+            "type": "java",
             "name": "Launch P1980",
             "request": "launch",
             "mainClass": "P1980",
