--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,10 +13,43 @@
         "unordered_set": "cpp",
         "vector": "cpp",
         "initializer_list": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "*.tcc": "cpp",
+        "complex": "cpp",
+        "iomanip": "cpp",
+        "istream": "cpp"
     },
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "jarlib/mysql-connector-java-8.0.28.jar"
+        "jarlib/mysql-connector-java-8.0.28.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\annotations-api.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\catalina.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\catalina-ant.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\catalina-ha.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\catalina-storeconfig.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\catalina-tribes.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\ecj-4.6.3.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\el-api.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\jasper.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\jasper-el.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\jaspic-api.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\jsp-api.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\servlet-api.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-api.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-coyote.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-dbcp.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-i18n-de.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-i18n-es.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-i18n-fr.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-i18n-ja.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-i18n-ko.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-i18n-ru.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-i18n-zh-CN.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-jdbc.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-jni.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-util.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-util-scan.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\tomcat-websocket.jar",
+        "d:\\Development\\apache-tomcat-8.5.76\\lib\\websocket-api.jar"
     ]
 }
