--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch exp6",
+            "request": "launch",
+            "mainClass": "JAVA.variety.exp6",
+            "projectName": "DevelopMentOnline_e683f3a1"
+        },
+        {
+            "type": "java",
+            "name": "Launch calculator",
+            "request": "launch",
+            "mainClass": "JAVA.utilapp.calculator",
+            "projectName": "DevelopMentOnline_e683f3a1"
+        },
+        {
+            "type": "java",
             "name": "Launch subclas",
             "request": "launch",
             "mainClass": "subclas",
